# zeroshot

zeroshot/: README.md  README.txt  pyproject.toml
zeroshot/zeroshot/: __init__.py  api.py
