[tool.poetry]
name = "zeroshot"
version = "0.1.0"
description = "coding exercise for arabot"
authors = ["Ahmed Alhelali"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
torch = "^2.2.2"
numpy = "^1.26.4"
transformers = "^4.39.2"
fastapi = {extras = ["all"], version = "^0.110.1"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
